<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTack"
    android:background="@color/green1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/add_title"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_back_add"
            android:onClick="onClickBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/back" />
    </LinearLayout>

    <EditText
        android:id="@+id/task_title1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/add_text1"
        android:background="@drawable/text"
        android:textSize="18dp"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/task_time1"
            android:layout_width="160dp"
            android:layout_height="32dp"
            android:hint="@string/add_text2"
            android:background="@drawable/text"
            android:textSize="18dp"
            android:inputType="date"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/task_data1"
            android:layout_width="160dp"
            android:layout_height="32dp"
            android:hint="@string/add_text3"
            android:background="@drawable/text"
            android:textSize="18dp"
            android:inputType="date"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


    </LinearLayout>

    <EditText
        android:id="@+id/task_text1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/add_text4"
        android:background="@drawable/text"
        android:textSize="18dp"
        android:paddingBottom="60dp"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rec1"
        android:text="@string/add_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:onClick="onClick1"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"/>

</LinearLayout>