<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/green1"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/signin_text1"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/back" />
    </LinearLayout>

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="175dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/text"
        android:fontFamily="@font/roboto"
        android:inputType="textPersonName"
        android:hint="@string/signin_login"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/usemail"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/signin_adress"
        android:background="@drawable/text"
        android:textSize="18dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/roboto"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/signin_password"
        android:background="@drawable/text"
        android:textSize="18dp"
        android:inputType="textPassword"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/nextbutton"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/roboto"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:text="@string/signin_text1"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:onClick="onClick"/>








</LinearLayout>