<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green1"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_title"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/roboto_bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ava" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rec"
        android:layout_gravity="center"
        android:text="@string/zd_sort1"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:layout_marginTop="60dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rec"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:text="@string/zd_sort2"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rec"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/zd_sort3"
        android:fontFamily="@font/roboto"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rec1"
        android:text="@string/add_zd"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:onClick="onClickAdd"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/rec2"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-60dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/list_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="onClickList"
        android:background="@drawable/list"
        android:layout_marginLeft="80dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/alarm"
        android:layout_marginLeft="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/calendar"
            android:layout_marginLeft="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/settings"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>



</LinearLayout>